# DSCI320ProjectWeb

./: notebooks.html  objects.inv  pyproject.toml  searchindex.js
_sources/: notebooks.ipynb
data/: README.html
data/processed/: README.html
data/raw/: README.html
website/: notebooks.ipynb
website/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
website/_build/html/: .buildinfo  notebooks.html  searchindex.js
website/_build/html/_sources/: notebooks.ipynb
website/_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb
